# jummah-prayer

./: .clang-format  .clang-tidy  .cppcheck  .editorconfig  .gitignore  BUILD.md  COMPONENTS.md  Makefile  PROJECT_STRUCTURE.md  README.md  roadmap.md
backend/: CMakeLists.txt  QUICKSTART.md  README.md
backend/src/: AuthService.cpp  AuthService.h  CitySearchService.cpp  CitySearchService.h  DatabaseService.cpp  DatabaseService.h  FileService.cpp  FileService.h  HttpServer.h  JsonService.cpp  JsonService.h  PrayerTimesCalculator.cpp  PrayerTimesCalculator.h  PrayerTimesService.h  create_db.cpp  server.cpp
frontend/: .gitignore  FEATURES.md  IMPROVEMENTS.md  QUICKSTART-REACT.md  README-REACT.md  README-URL-CONFIG.md  README.md  ROADMAP.md  TUNNEL.md  app.js  index-react.html  index.html  manifest.json  package-lock.json  package.json  prayer-calculator.js  start-tunnel.sh  styles.css  sw.js  test-auth.html  translations.js  vite.config.js
frontend/js/: app-state.js  app.js  articles.js  auth.js  calendar.js  city-search.js  dhikr.js  events.js  geolocation.js  navigation.js  notifications.js  prayer-times.js  qibla.js  service-worker.js  settings.js  theme.js  ui-enhancements.js  utils.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AppRouter.jsx  BottomNavigation.jsx  Breadcrumbs.jsx  CardAnimation.jsx  CitySearchModal.jsx  CountdownHeader.jsx  DatePicker.jsx  PrayerTimeCard.jsx  QuickActions.css  QuickActions.jsx  SkeletonLoader.css  SkeletonLoader.jsx
frontend/src/config/: api.js  routes.js
frontend/src/contexts/: AccessibilityContext.jsx  AuthContext.jsx  NotificationsContext.jsx  PrayerTimesContext.jsx  PrayerTrackingContext.jsx  ThemeContext.jsx
frontend/src/data/: articlesData.js  dhikrData.js
frontend/src/hooks/: useAccessibility.js  useKeyboardNavigation.js
frontend/src/pages/: ArticlesPage.jsx  DhikrPage.jsx  EventsPage.jsx  LoginPage.jsx  MainPage.jsx  PrayerCalendarPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SettingsPage.jsx  StatsPage.jsx
frontend/src/services/: authService.js  citySearchService.js  prayerCalculator.js
frontend/src/styles/: index.css
frontend/src/utils/: hijriUtils.js  icsExport.js  qiblaUtils.js  translations.js
mobile/: CMakeLists.txt
mobile/macos/: Info.plist
mobile/qml/: DhikrPage.qml  Main.qml  MainPage.qml  QiblaPage.qml  SettingsPage.qml  Theme.qml  Translator.qml  qml.qrc  qmldir
mobile/qml/components/: CitySearchDialog.qml  CustomTabButton.qml  PrayerTimeCard.qml  SettingsSection.qml  qmldir
mobile/src/: AppSettings.cpp  AppSettings.h  LocationService.cpp  LocationService.h  NotificationService.cpp  NotificationService.h  PrayerTimesCalculator.cpp  PrayerTimesCalculator.h  main.cpp
mobile/tests/: CMakeLists.txt  qml_tests.qrc  test_prayertimes.cpp  test_qml_ui.cpp  tst_ui_main.qml
scripts/: fix_dependencies.sh
